<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/img_settings"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_settings"
        app:layout_constraintEnd_toEndOf="@+id/bt_settings"
        app:layout_constraintStart_toEndOf="@+id/tv_settings"
        app:layout_constraintTop_toTopOf="@+id/bt_settings"
        app:srcCompat="@drawable/gear"
        android:contentDescription="TODO" tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/setelan"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:fontFamily="@font/berlinsansdb"
        app:layout_constraintBottom_toBottomOf="@+id/bt_settings"
        app:layout_constraintStart_toStartOf="@+id/bt_settings"
        app:layout_constraintTop_toTopOf="@+id/bt_settings" />

    <Button
        android:id="@+id/bt_settings"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="#A7FCA7"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_profile" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_profile"
        app:layout_constraintEnd_toEndOf="@+id/bt_profile"
        app:layout_constraintStart_toEndOf="@+id/tv_profile"
        app:layout_constraintTop_toTopOf="@+id/bt_profile"
        app:srcCompat="@drawable/people"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/profil"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:fontFamily="@font/berlinsansdb"
        app:layout_constraintBottom_toBottomOf="@+id/bt_profile"
        app:layout_constraintStart_toStartOf="@+id/bt_profile"
        app:layout_constraintTop_toTopOf="@+id/bt_profile" tools:targetApi="lollipop" />

    <Button
        android:id="@+id/bt_profile"
        android:layout_width="132dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="#A7FCA7"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_main" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/selamat_datang_di"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/berlinsansdb"
        app:layout_constraintEnd_toEndOf="@+id/tv_heikei"
        app:layout_constraintStart_toStartOf="@+id/tv_heikei"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <TextView
        android:id="@+id/tv_heikei"
        android:layout_width="316dp"
        android:layout_height="166dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:background="#A7FCA7"
        android:textColor="@android:color/background_dark"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_main"
        android:layout_width="132dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="#A7FCA7"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_heikei" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="292dp"
        android:layout_height="193dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_heikei"
        app:layout_constraintStart_toStartOf="@+id/tv_heikei"
        app:layout_constraintTop_toTopOf="@+id/tv_heikei"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text=" Menu\nUtama"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:fontFamily="@font/berlinsansdb"
        app:layout_constraintBottom_toBottomOf="@+id/bt_main"
        app:layout_constraintEnd_toEndOf="@+id/bt_main"
        app:layout_constraintStart_toStartOf="@+id/bt_main"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="57dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_main"
        app:layout_constraintEnd_toEndOf="@+id/bt_main"
        app:layout_constraintStart_toEndOf="@+id/tv_main"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:srcCompat="@drawable/menu" />

</android.support.constraint.ConstraintLayout>